[package]
name = "rust_graphql_api_boilerplate"
version = "0.1.0"
authors = ["moondaddi <woonki.moon@gmail.com>"]
edition = "2018"

[dependencies]
warp= "0.1.20"
log = "0.4.8"
pretty_env_logger = "0.3.1"
juniper = "0.14.1"
diesel = { version = "1.4.3", features = [ "postgres", "chrono" ] }
dotenv = "0.15.0"
chrono = "0.4.9"
serde_json = "1.0.41"
serde_derive = "1.0.102"
failure = "0.1.6"
futures = "0.1.29"
serde = "1.0.102"
tokio-threadpool = "0.1.16"
bcrypt = "0.6.1"
jsonwebtoken = "6.0.1"
